--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@angular/compiler": "~9.1.11",
     "@angular/core": "~9.1.11",
     "@angular/forms": "~9.1.11",
+    "@angular/localize": "^10.0.2",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^9.15.2",
